u[date gioi thieu v1

--- a/css/style.css
+++ b/css/style.css
@@ -3922,7 +3922,7 @@ button.mfp-arrow {
     margin-bottom: 30px;
 }
 .pricing-card .desc {
-    padding: 40px;
+    padding: 40px 30px;
 } 
 .pricing-card .name {
     line-height: 1;
