update bang gia

--- a/css/style.css
+++ b/css/style.css
@@ -4592,7 +4592,11 @@ button.mfp-arrow {
     margin: 0;
     font-weight: 400;
 }
-
+.lien-he{
+    padding: 80px 30px;
+    border: 1px solid #aa8453;
+    border-radius: 20px;
+}
 
 /* ======= Contact style ======= */
 .contact h3 {
@@ -4600,8 +4604,8 @@ button.mfp-arrow {
     color: #222;
 }
 .map {	
-	-webkit-filter: grayscale(100%);
-	filter: grayscale(100%);
+	/* -webkit-filter: grayscale(100%);
+	filter: grayscale(100%); */
 	}
 
 
